attempting to fix addressbar on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,13 @@
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
 
+  overflow: hidden;
+  height: 100%;
+}
+
+html {
+  overflow: hidden;
+  height: 100%;
 }
 
 body {
